# chinese_dictionary

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-CC-CEDICT.rtf  Makefile  README.md
data/: simplified.dictionary  traditional.dictionary
src/: chinese_dictionary.rs  lib.rs
