[package]
name = "chinese_dictionary"
version = "2.1.0"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "A searchable Chinese / English dictionary with helpful utilities."
repository = "https://github.com/sotch-pr35mac/chinese_dictionary"
readme = "README.md"
keywords = ["chinese", "dictionary", "hanzi", "cc-cedict", "convert"]
categories = ["internationalization", "localization", "parser-implementations", "text-processing", "value-formatting"]
license = "MIT"
edition = "2018"
exclude = ["CHANGELOG.md", "LICENSE-CC-CEDICT.rtf", "target", "LICENSE"]

[dependencies]
bincode = "1.3.1"
character_converter = "2.1.0"
chinese_detection = "2.0.0"
serde = "1.0.117"
serde_derive = "1.0.117"
once_cell = "1.13.0"
